<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/details_layout">
    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:contentDescription="@string/movie_poster_desc"
        android:scaleType="fitXY"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/movie_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        tools:text="2015"
        app:layout_constraintLeft_toRightOf="@+id/movie_image"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/movie_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="120 min"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/movie_date"
        app:layout_constraintLeft_toLeftOf="@+id/movie_date" />

    <TextView
        android:id="@+id/movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        tools:text="8.1/10"
        app:layout_constraintLeft_toLeftOf="@+id/movie_runtime"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/movie_runtime"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:scaleType="center"
        android:src="@android:drawable/btn_star_big_off"
        android:contentDescription="@string/fav_image_desc"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/movie_synopsis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        tools:text="This movie is so great. This movie is so great. This movie is so great."
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/movie_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="16dp" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/movie_synopsis"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/trailers_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trailers_label"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintLeft_toLeftOf="@+id/movie_synopsis"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/trailers_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/trailers_label"
        app:layout_constraintLeft_toLeftOf="@+id/trailers_label"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/trailers_loading_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trailers_label"
        app:layout_constraintBottom_toBottomOf="@+id/divider2"/>

    <TextView
        android:id="@+id/error_no_trailers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_no_trailers_message"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/trailers_label"
        app:layout_constraintBottom_toBottomOf="@+id/trailers_label" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/trailers_list"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/reviews_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews_label"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintLeft_toLeftOf="@+id/trailers_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reviews_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/reviews_label"
        app:layout_constraintLeft_toLeftOf="@+id/reviews_label"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"/>

    <ProgressBar
        android:id="@+id/reviews_loading_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviews_label" />

    <TextView
        android:id="@+id/error_no_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_no_reviews_message"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviews_label"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>